<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZoteroApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="et_username">username</string>
    <string name="et_password">password</string>
    <string name="bttn_login">login</string>
    <string name="bttn_next">next page</string>
    <string name="new_Intent">new intent enable</string>
    <string name="verfication_code">verification code</string>
    <string name="collection_label"><u>Collections</u></string>
    <string name="item_label"><u>Items</u></string>
    <string name="bttn_expandList">View Library</string>
    <string name="Info_Tab">Information</string>
    <string name="Note_Tab">Notes</string>
    <string name="label_type">Type :</string>
    <string name="label_url">URL :</string>
    <string name="label_author">Author :</string>
    <string name="label_abstract">Abstract Note :</string>
    <string name="menu_refresh">Refresh</string>
    <string name="search"> search </string>
    <string name="No_Available">  no available</string>
    <string name="children_info">Children Information</string>
    <string name="see_attachment">Download Attachment</string>
    <string name="label_DOI">DOI</string>
    <string name="label_title">Title :</string>
    <string name="bttn_SubCollection">see sub-collections</string>
    <string name="bttn_Sub_Collection">Subcollections</string>
    <string name="tv_subcollection">long tap for subcollection</string>
    <string name="UserID">User ID</string>
    <string name="UserKEY">User Key</string>
    <string name="bttn_switch_user">Switch User</string>
    <string name="bttn_change_user">change user</string>
    <string name="label_ISSN">ISSN</string>
    <string name="label_ISBN">ISBN</string>
    <string name="label_pages">Pages</string>
    <string name="label_publisher">Publisher</string>
    <string name="blog_title">Blog Title</string>
    <string name="shortTitle">Short Title</string>
    <string name="date_modified">Date modified</string>
    <string name="date">Date </string>

</resources>
