<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainZoteroActivity" >

    <ImageView
        android:layout_width="769dp"
        android:layout_height="919dp"
        android:layout_gravity="center"
        android:layout_weight="1.33"
        android:src="@drawable/eikona_tei" />

    <TextView
        android:id="@+id/tv_userID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UserID" />

    <EditText
        android:id="@+id/et_userID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/tv_userKEY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UserKEY" />

    <EditText
        android:id="@+id/et_userKEY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bttn_next"
        android:visibility="invisible" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bttn_login" />

    <Button
        android:id="@+id/bttn_change_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bttn_change_user"
        android:visibility="visible" />

</LinearLayout>