<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_base"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linear_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/et_collection_label"
            android:layout_width="376dp"
            android:layout_height="49dp"
            android:text="@string/collection_label"
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/et_item_label"
            android:layout_width="396dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:text="@string/item_label"
             android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_linear_lv_fr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linear_listview_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ListView
                android:id="@+id/list1"
                android:layout_width="320dp"
                android:layout_height="400dp"
                 >
            </ListView>

            <ListView
                android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                 >
            </ListView>
            
        </LinearLayout>

        <TextView
            android:id="@+id/gap2"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img_search"
                android:layout_width="237dp"
                android:layout_height="69dp"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:src="@drawable/magnifying_glass" />

            <EditText
                android:id="@+id/et_search"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:singleLine="true"
                android:hint="@string/search" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/framelayout1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="17.72"
            android:scrollbars="vertical"
            android:visibility="visible" >

        </FrameLayout>
    </LinearLayout>

</LinearLayout>